<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="26dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:maxLines="1"
        android:text="@string/emergency_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_subTitle_text"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
         />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="26dp"
        android:background="@color/border_color"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_now_text"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="08dp"
        />

</LinearLayout>