<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/backgroundColor"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_corners_background"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription=""
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/your_info_text" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_margin="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llActionBar" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="08dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:maxLines="1"
            android:text="@string/name_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgProfile"
            app:layout_constraintTop_toTopOf="@id/imgProfile" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/age_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvSigns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/vital_signs_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/imgProfile"
            app:layout_constraintTop_toBottomOf="@id/imgProfile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHealth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="@dimen/cardView_default_radius"
            app:cardElevation="@dimen/cardView_default_elevation"
            app:layout_constraintEnd_toStartOf="@+id/cvSymptom"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSigns">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tvSP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sp_text"
                    android:textSize="15sp"
                    android:layout_alignParentTop="true"
                    />

                <TextView
                    android:id="@+id/tvSPValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sp_value_text"
                    android:textSize="28sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/tvSP"
                    />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/status_good_text"
                    android:textSize="13sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/tvSPValue"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSymptom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="@dimen/cardView_default_radius"
            app:cardElevation="@dimen/cardView_default_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cvHealth"
            app:layout_constraintTop_toBottomOf="@id/tvSigns">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tvBPM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/bpm_text"
                    android:textSize="15sp"
                    android:layout_alignParentTop="true"
                    />

                <TextView
                    android:id="@+id/tvBPMValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/bpm_value_text"
                    android:textSize="28sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/tvBPM"
                    />

                <TextView
                    android:id="@+id/tvBPMStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/status_good_text"
                    android:textSize="13sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/tvBPMValue"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/cvRR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="@dimen/cardView_default_radius"
            app:cardElevation="@dimen/cardView_default_elevation"
            app:layout_constraintEnd_toEndOf="@id/cvHealth"
            app:layout_constraintStart_toStartOf="@id/cvHealth"
            app:layout_constraintTop_toBottomOf="@id/cvHealth">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tvRR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/RR_text"
                    android:textSize="15sp"
                    android:layout_alignParentTop="true"
                    />

                <TextView
                    android:id="@+id/tvRRValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/RR_value_text"
                    android:textSize="28sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/tvRR"
                    />

                <TextView
                    android:id="@+id/tvRRStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/status_good_text"
                    android:textSize="13sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/tvRRValue"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvECG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ECG_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/cvRR"
            app:layout_constraintTop_toBottomOf="@id/cvRR" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvECG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="@dimen/cardView_default_radius"
            app:cardElevation="@dimen/cardView_default_elevation"
            app:layout_constraintEnd_toEndOf="@id/cvSymptom"
            app:layout_constraintStart_toStartOf="@id/cvHealth"
            app:layout_constraintTop_toBottomOf="@id/tvECG"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tvEcg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ECG_text"
                    android:textSize="13sp"
                    android:layout_alignParentTop="true"
                    />

                <ImageView
                    android:id="@+id/imgECG"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="08dp"
                    android:layout_marginStart="-30dp"
                    android:layout_marginEnd="-30dp"
                    android:scaleType="centerCrop"
                    android:gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_ecg"
                    android:layout_below="@id/tvEcg"
                    />

                <TextView
                    android:id="@+id/tvECGStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/status_stable_text"
                    android:textSize="13sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/imgECG"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
